refs #24 Добавлены закрытие и открытие списков

--- a/index.html
+++ b/index.html
@@ -10,7 +10,15 @@
 
   <body>
     <div class="main-list">
-      <div class="header-list" id="header-1">Заголовок пункта 1</div>
+      <div class="header-list" id="header-0">Заголовок пункта 1</div>
+      <div class="content" id="content-0">
+        <div>1-й подпункт</div>
+        <div>2-й подпункт</div>
+        <div>3-й подпункт</div>
+        <div>4-й подпункт</div>
+        <div>5-й подпункт</div>
+      </div>
+      <div class="header-list" id="header-1">Заголовок пункта 2</div>
       <div class="content" id="content-1">
         <div>1-й подпункт</div>
         <div>2-й подпункт</div>
@@ -20,6 +28,22 @@
       </div>
       <div class="header-list" id="header-2">Заголовок пункта 2</div>
       <div class="content" id="content-2">
+        <div>1-й подпункт</div>
+        <div>2-й подпункт</div>
+        <div>3-й подпункт</div>
+        <div>4-й подпункт</div>
+        <div>5-й подпункт</div>
+      </div>
+      <div class="header-list" id="header-3">Заголовок пункта 2</div>
+      <div class="content" id="content-3">
+        <div>1-й подпункт</div>
+        <div>2-й подпункт</div>
+        <div>3-й подпункт</div>
+        <div>4-й подпункт</div>
+        <div>5-й подпункт</div>
+      </div>
+      <div class="header-list" id="header-4">Заголовок пункта 2</div>
+      <div class="content" id="content-4">
         <div>1-й подпункт</div>
         <div>2-й подпункт</div>
         <div>3-й подпункт</div>
