refs #24 Добавлены стили и анимация раскрывающегося списка, можно выбрать режим раскрытия, адаптация

--- a/index.html
+++ b/index.html
@@ -9,46 +9,54 @@
   </head>
 
   <body>
-    <div class="main-list">
-      <div class="header-list" id="header-0">Заголовок пункта 1</div>
-      <div class="content" id="content-0">
-        <div>1-й подпункт</div>
-        <div>2-й подпункт</div>
-        <div>3-й подпункт</div>
-        <div>4-й подпункт</div>
-        <div>5-й подпункт</div>
+    <div class="main-container">
+      <div class="setting">
+        <input type="checkbox" id="collapse">Collapse</input>
       </div>
-      <div class="header-list" id="header-1">Заголовок пункта 2</div>
-      <div class="content" id="content-1">
-        <div>1-й подпункт</div>
-        <div>2-й подпункт</div>
-        <div>3-й подпункт</div>
-        <div>4-й подпункт</div>
-        <div>5-й подпункт</div>
-      </div>
-      <div class="header-list" id="header-2">Заголовок пункта 2</div>
-      <div class="content" id="content-2">
-        <div>1-й подпункт</div>
-        <div>2-й подпункт</div>
-        <div>3-й подпункт</div>
-        <div>4-й подпункт</div>
-        <div>5-й подпункт</div>
-      </div>
-      <div class="header-list" id="header-3">Заголовок пункта 2</div>
-      <div class="content" id="content-3">
-        <div>1-й подпункт</div>
-        <div>2-й подпункт</div>
-        <div>3-й подпункт</div>
-        <div>4-й подпункт</div>
-        <div>5-й подпункт</div>
-      </div>
-      <div class="header-list" id="header-4">Заголовок пункта 2</div>
-      <div class="content" id="content-4">
-        <div>1-й подпункт</div>
-        <div>2-й подпункт</div>
-        <div>3-й подпункт</div>
-        <div>4-й подпункт</div>
-        <div>5-й подпункт</div>
+      <!-- Список -->
+      <div class="main-list">
+        <!-- Заголовок элемента списка -->
+        <div class="header-list" id="header-0">Заголовок пункта 1</div>
+        <!-- Содержимое -->
+        <div class="content" id="content-0">
+          <p>1-й подпункт</p>
+          <p>2-й подпункт</p>
+          <p>3-й подпункт</p>
+          <p>4-й подпункт</p>
+          <p>5-й подпункт</p>
+        </div>
+        <div class="header-list" id="header-1">Заголовок пункта 2</div>
+        <div class="content" id="content-1">
+          <p>1-й подпункт</p>
+          <p>2-й подпункт</p>
+          <p>3-й подпункт</p>
+          <p>4-й подпункт</p>
+          <p>5-й подпункт</p>
+        </div>
+        <div class="header-list" id="header-2">Заголовок пункта 3</div>
+        <div class="content" id="content-2">
+          <p>1-й подпункт</p>
+          <p>2-й подпункт</p>
+          <p>3-й подпункт</p>
+          <p>4-й подпункт</p>
+          <p>5-й подпункт</p>
+        </div>
+        <div class="header-list" id="header-3">Заголовок пункта 4</div>
+        <div class="content" id="content-3">
+          <p>1-й подпункт</p>
+          <p>2-й подпункт</p>
+          <p>3-й подпункт</p>
+          <p>4-й подпункт</p>
+          <p>5-й подпункт</p>
+        </div>
+        <div class="header-list" id="header-4">Заголовок пункта 5</div>
+        <div class="content" id="content-4">
+          <p>1-й подпункт</p>
+          <p>2-й подпункт</p>
+          <p>3-й подпункт</p>
+          <p>4-й подпункт</p>
+          <p>5-й подпункт</p>
+        </div>
       </div>
     </div>
     <script type="text/javascript" src="scripts/script.js" defer></script>
